<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">firstProj</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">WELCOME!</string>
    <string name="login">Login</string>
    <string name="login_box">ID or e-mail address</string>
    <string name="register">Register</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="password">Password</string>
    <string name="title_activity_success_login">SuccessLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginSuccess">Success!</string>
	<string name="rejectLogin">Wrong e-mail or password!
	    Try again!</string>
	<string name="ok">Ok</string>
	<string name="cancle">Cancle</string>
</resources>
