<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginPage" >

    <EditText android:id="@+id/edit_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_box" />
    
    <EditText android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    
    <Button android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    <!--  android:inputType="textPassword" -->

</LinearLayout>
