<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_login_start"
        android:layout_marginRight="58dp"
        android:layout_marginTop="57dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="96dp"
        android:text="@string/welcome"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_login_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button_register"
        android:layout_marginBottom="142dp"
        android:text="@string/login" />

</RelativeLayout>